Quickly fix member photo being out of bounds of background tab

--- a/styles.less
+++ b/styles.less
@@ -1442,7 +1442,8 @@ body {
 			position: absolute;
 			width: 78vw;
 			margin-left: 11vw;
-			bottom:19vh;
+			bottom: 18vh;
+			object-fit: contain;
 		}
 		.slide-10-dark-cloud {
 			position: absolute;
@@ -1716,7 +1717,7 @@ body {
 	transition: transform 0.6s ease-out;
 	transform: translate(50vw, 80vh) rotateX(40deg) rotateY(80deg) scale(1.7);
 	.drop-shadow();
-	
+
 	&.in {
 		transform: translate(0, 0) rotateX(0deg) rotateY(0deg) scale(1);
 	}
